src/test/resources/frontendReference/invalid/semanticErr/multiple/funcMess.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 13:4 -- Variable x is not defined in this scope
